syntax = "proto3";

package metadata;
option go_package = "github.com/Sene4ka/cloud_storage/internal/api";

import "google/protobuf/timestamp.proto";

service MetadataService {
  rpc CreateMetadata(CreateMetadataRequest) returns (CreateMetadataResponse);
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  rpc ListMetadata(ListMetadataRequest) returns (ListMetadataResponse);
  rpc UpdateMetadata(UpdateMetadataRequest) returns (UpdateMetadataResponse);
  rpc DeleteMetadata(DeleteMetadataRequest) returns (DeleteMetadataResponse);
  rpc CheckAccess(CheckAccessRequest) returns (CheckAccessResponse);
}

message FileMetadata {
  string id = 1;
  string user_id = 2;
  string filename = 3;
  string original_name = 4;
  int64 size = 5;
  string mime_type = 6;
  string storage_path = 7;
  string bucket = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  bool is_public = 11;
  map<string, string> tags = 12;
}

message CreateMetadataRequest {
  string user_id = 1;
  string filename = 2;
  string original_name = 3;
  int64 size = 4;
  string mime_type = 5;
  string storage_path = 6;
  string bucket = 7;
  bool is_public = 8;
  map<string, string> tags = 9;
}

message CreateMetadataResponse {
  FileMetadata metadata = 1;
}

message GetMetadataRequest {
  string id = 1;
  string user_id = 2;
}

message GetMetadataResponse {
  FileMetadata metadata = 1;
}

message ListMetadataRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  string sort_by = 4;
  string sort_order = 5;
  string search = 6;
}

message ListMetadataResponse {
  repeated FileMetadata items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateMetadataRequest {
  string id = 1;
  string user_id = 2;
  string filename = 3;
  string original_name = 4;
  bool is_public = 5;
  map<string, string> tags = 6;
}

message UpdateMetadataResponse {
  FileMetadata metadata = 1;
}

message DeleteMetadataRequest {
  string id = 1;
  string user_id = 2;
}

message DeleteMetadataResponse {
  bool success = 1;
}

message CheckAccessRequest {
  string file_id = 1;
  string user_id = 2;
}

message CheckAccessResponse {
  bool has_access = 1;
  string storage_path = 2;
  string bucket = 3;
}